[project]
name = "nsug"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nekrassov01", email = "unclek62@gmail.com" }
]
dependencies = [
    "langchain>=0.0.27",
    "openai>=1.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "nsug:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nsug"]
